--- a/generation/config.yaml
+++ b/generation/config.yaml
@@ -2,17 +2,15 @@ install:
   windows:
     root: "C:\\Users\\liuqiang\\Desktop\\qemu\\qemu-4.0.0"
     machine_name: "hw\\arm"
-    ic_name: "hw\\intc"
     soc_name: "hw\\arm"
-    peripheral_name: "hw\\arm"
+    ic_name: "hw\\intc"
+    bridge_name: "hw\\arm"
     timer_name: "hw\\timer"
-    gpio_name: "hw\\gpio"
   linux:
     root: "/home/liuqiang/qemu-4.0.0"
     machine_name: "hw/arm"
     ic_name: "hw/intc"
     soc_name: "hw/arm"
-    peripheral_name: "hw/arm"
+    bridge_name: "hw/arm"
     timer_name: "hw/timer"
-    gpio_name: "hw/gpio"
   include: "include"
