--- a/generation/makefiles/hw/arm/Makefile.objs
+++ b/generation/makefiles/hw/arm/Makefile.objs
@@ -42,4 +42,4 @@ obj-$(CONFIG_ARM_SMMUV3) += smmu-common.o smmuv3.o
 obj-$(CONFIG_FSL_IMX6UL) += fsl-imx6ul.o mcimx6ul-evk.o
 obj-$(CONFIG_NRF51_SOC) += nrf51_soc.o microbit.o
 
-obj-$(CONFIG_WRT350N_V2) += mv88f5181L_peripherals.o mv88f5181L.o wrt350n_v2.o
+obj-$(CONFIG_WRT350N_V2) += mv88f5181l_bridge.o mv88f5181l.o wrt350n_v2.o
