--- a/generation/makefiles/hw/intc/Makefile.objs
+++ b/generation/makefiles/hw/intc/Makefile.objs
@@ -49,4 +49,4 @@ obj-$(CONFIG_MIPS_CPS) += mips_gic.o
 obj-$(CONFIG_NIOS2) += nios2_iic.o
 obj-$(CONFIG_OMPIC) += ompic.o
 
-obj-$(CONFIG_WRT350N_V2) += mv88f5181L_ic.o
+obj-$(CONFIG_WRT350N_V2) += mv88f5181l_ic.o
