--- a/generation/machines/ox820.yaml
+++ b/generation/machines/ox820.yaml
@@ -6,6 +6,8 @@ machine:
   ram:
     ram_size: "32 * MiB"
   flash:
+    nor_flash: 0
+    nand_flash: 1
     flash_addr: "0xf4000000"
     flash_sect_size: "64 * KiB"
     flash_size: "8 * MiB"
@@ -29,20 +31,21 @@ machine:
       timer:
         timer_name: ~
       uart:
-        uart_name: "ox820_uart"
+        uart_name: "ns16550a"
         uart_mmio_base: "0x44200000"
         uart_mmio_size: "0x100"
+        uart_irq: "23"
     bamboo:
       # the second class devices that must have registers callbacks
-      - name: "ox820_gpio"
+      - name: "oxmas782x_gpio"
         id: "0"
-        mmio_base: "0xf1010100"
-        mmio_size: "0x100"
+        mmio_base: "0x44000000"
+        mmio_size: "0x200000"
         registers:
           - name: "gpio_reserved"
             offset: "0x0...0x100"
             value: "0x0"
-      - name: "ox820_pcie_interface"
+      - name: "nas782x_pcie"
         id: "1"
         mmio_base: "0x47C00000"
         mmio_size: "0x500000"
@@ -50,27 +53,59 @@ machine:
           - name: "pcie_reserved"
             offset: "0x0...0x500000"
             value: "0x0"
-      - name: "ox820_sata"
-        id: ""
+      - name: "nas782x_sata"
+        id: "2"
         mmio_base: "0x45900000"
         mmio_size: "0x100000"
         registers:
           - name: "sata_reserved"
             offset: "0x0...0x100000"
             value: "0x0"
-      - name: "ox820_ehci"
-        id: "6"
-        mmio_base: "0x40200100"
-        mmio_size: "0xf00"
-        registers:
-          - name: "ehci_reserved"
-            offset: "0x0...0xf00"
-            value: "0x0"
-      - name: "ox820_gmac"
+      - name: "nas782x_gmac"
         id: ""
         mmio_base: "0x40400000"
         mmio_size: "0x2000"
         registers:
           - name: "gmac_reserved"
             offset: "0x0...0x2000"
+            value: "0x0"
+      - name: "nas782x_ehci"
+        id: "3"
+        mmio_base: "0x40200100"
+        mmio_size: "0xf00"
+        registers:
+          - name: "ehci_reserved"
+            offset: "0x0...0xf00"
+            value: "0x0"
+      - name: "nas782x_pll"
+        id: ""
+        mmio_base: "0x44e001f0"
+        mmio_size: "0x10"
+        registers:
+          - name: "pll_reserved"
+            offset: "0x0...0x10"
+            value: "0x0"
+      - name: "nas782x_reset"
+        id: ""
+        mmio_base: "0x44e00034"
+        mmio_size: "0x8"
+        registers:
+          - name: "reset_reserved"
+            offset: "0x0...0x8"
+            value: "0x0"
+      - name: "nas782x_rps_timer"
+        id: ""
+        mmio_base: "0x44400200"
+        mmio_size: "0x40"
+        registers:
+          - name: "rps_timer_reserved"
+            offset: "0x0...0x40"
+            value: "0x0"
+      - name: "nas782x_rps"
+        id: ""
+        mmio_base: "0x44400000"
+        mmio_size: "0x14"
+        registers:
+          - name: "rps_reserved"
+            offset: "0x0...0x14"
             value: "0x0"
