--- a/generation/machines/nas7820.yaml
+++ b/generation/machines/nas7820.yaml
@@ -34,7 +34,7 @@ machine:
         uart_name: "ns16550a"
         uart_mmio_base: "0x44200000"
         uart_mmio_size: "0x100"
-        uart_baud_rate: "6250000"
+        uart_baud_rate: "115200"
         uart_reg_shift: "0"
         uart_irq: "23"
     bamboo:
