update init values for plla to assign clock rate of twdclk to none-zone

--- a/generation/machines/nas7820.yaml
+++ b/generation/machines/nas7820.yaml
@@ -84,8 +84,14 @@ machine:
         mmio_base: "0x44e001f0"
         mmio_size: "0x10"
         registers:
+          - name: "pll_ctrl_0"
+            offset: "0x0"
+            value: "3 << 8 | 3 << 4"
+          - name: "pll_ctrl_1"
+            offset: "0x4"
+            value: "32768"
           - name: "pll_reserved"
-            offset: "0x0 ... 0x10"
+            offset: "0x8 ... 0x10"
             value: "0x0"
       - name: "nas782x_reset"
         id: "6"
