--- a/generation/machines/nas7820.yaml
+++ b/generation/machines/nas7820.yaml
@@ -39,32 +39,136 @@ machine:
         uart_irq: "23"
     bamboo:
       # the second class devices that must have registers callbacks
-      - name: "oxmas782x_gpio"
+      - name: "oxmas782x_gpioa_0"
         id: "0"
         mmio_base: "0x44000000"
-        mmio_size: "0x200000"
+        mmio_size: "0x100"
         registers:
-          - name: "gpio_reserved"
+          - name: "gpioa_0_reserved"
             offset: "0x0 ... 0x100"
             value: "0x0"
-      - name: "nas782x_pcie"
+      - name: "oxmas782x_gpioa_1"
         id: "1"
-        mmio_base: "0x47C00000"
-        mmio_size: "0x500000"
+        mmio_base: "0x44E00000"
+        mmio_size: "0x200"
         registers:
-          - name: "pcie_reserved"
-            offset: "0x0 ... 0x500000"
+          - name: "gpioa_1_reserved"
+            offset: "0x0 ... 0x200"
             value: "0x0"
-      - name: "nas782x_sata"
+      - name: "oxmas782x_gpiob_0"
         id: "2"
-        mmio_base: "0x45900000"
-        mmio_size: "0x100000"
+        mmio_base: "0x44100000"
+        mmio_size: "0x100"
         registers:
-          - name: "sata_reserved"
-            offset: "0x0 ... 0x100000"
+          - name: "gpiob_0_reserved"
+            offset: "0x0 ... 0x100"
+            value: "0x0"
+      - name: "oxmas782x_gpiob_1"
+        id: "3"
+        mmio_base: "0x44F00000"
+        mmio_size: "0x200"
+        registers:
+          - name: "gpiob_1_reserved"
+            offset: "0x0 ... 0x200"
+            value: "0x0"
+      - name: "nas782x_pcie0_cfg"
+        id: "4"
+        mmio_base: "0x47C00000"
+        mmio_size: "0x1000"
+        registers:
+          - name: "pcie0_cfg_reserved"
+            offset: "0x0 ... 0x1000"
+            value: "0x0"
+      - name: "nas782x_pcie0_it"
+        id: "5"
+        mmio_base: "0x47D00000"
+        mmio_size: "0x100"
+        registers:
+          - name: "pcie0_it_reserved"
+            offset: "0x0 ... 0x100"
+            value: "0x0"
+      - name: "nas782x_pcie0_phy"
+        id: "6"
+        mmio_base: "0x47A00000"
+        mmio_size: "0x10"
+        registers:
+          - name: "pcie0_phy_reserved"
+            offset: "0x0 ... 0x10"
+            value: "0x0"
+      - name: "nas782x_pcie1_cfg"
+        id: "7"
+        mmio_base: "0x47E00000"
+        mmio_size: "0x1000"
+        registers:
+          - name: "pcie1_cfg_reserved"
+            offset: "0x0 ... 0x1000"
+            value: "0x0"
+      - name: "nas782x_pcie1_it" # inbound translator
+        id: "8"
+        mmio_base: "0x47F00000"
+        mmio_size: "0x100"
+        registers:
+          - name: "pcie1_it_reserved"
+            offset: "0x0 ... 0x100"
+            value: "0x0"
+      - name: "nas782x_pcie1_phy"
+        id: "9"
+        mmio_base: "0x44A00000"
+        mmio_size: "0x10"
+        registers:
+          - name: "pcie1_phy_reserved"
+            offset: "0x0 ... 0x10"
+            value: "0x0"
+      - name: "nas782x_sata_ports"
+        id: "10"
+        mmio_base: "0x45900000"
+        mmio_size: "0x20000"
+        registers:
+          - name: "sata_ports_reserved"
+            offset: "0x0 ... 0x20000"
+            value: "0x0"
+      - name: "nas782x_sata_dmactl"
+        id: "11"
+        mmio_base: "0x459A0000"
+        mmio_size: "0x40"
+        registers:
+          - name: "sata_dmactl_reserved"
+            offset: "0x0 ... 0x40"
+            value: "0x0"
+      - name: "nas782x_sata_sgdma"
+        id: "12"
+        mmio_base: "0x459B0000"
+        mmio_size: "0x20"
+        registers:
+          - name: "sata_sgdma_reserved"
+            offset: "0x0 ... 0x20"
+            value: "0x0"
+      - name: "nas782x_sata_core"
+        id: "13"
+        mmio_base: "0x459E0000"
+        mmio_size: "0x2000"
+        registers:
+          - name: "sata_core_reserved"
+            offset: "0x0 ... 0x2000"
+            value: "0x0"
+      - name: "nas782x_sata_pyh"
+        id: "14"
+        mmio_base: "0x44900000"
+        mmio_size: "0xC"
+        registers:
+          - name: "sata_pyh_reserved"
+            offset: "0x0 ... 0xC"
+            value: "0x0"
+      - name: "nas782x_sata_descriptors"
+        id: "15"
+        mmio_base: "0x50000000"
+        mmio_size: "0x1000"
+        registers:
+          - name: "sata_descriptors_reserved"
+            offset: "0x0 ... 0x1000"
             value: "0x0"
       - name: "nas782x_gmac"
-        id: "3"
+        id: "16"
         mmio_base: "0x40400000"
         mmio_size: "0x2000"
         registers:
@@ -72,29 +176,37 @@ machine:
             offset: "0x0 ... 0x2000"
             value: "0x0"
       - name: "nas782x_ehci"
-        id: "4"
+        id: "17"
         mmio_base: "0x40200100"
         mmio_size: "0xf00"
         registers:
           - name: "ehci_reserved"
             offset: "0x0 ... 0xf00"
             value: "0x0"
-      - name: "nas782x_pll"
-        id: "5"
+      - name: "nas782x_plla"
+        id: "18"
         mmio_base: "0x44e001f0"
         mmio_size: "0x10"
         registers:
-          - name: "pll_ctrl_0"
+          - name: "plla_ctrl_0"
             offset: "0x0"
             value: "3 << 8 | 3 << 4"
-          - name: "pll_ctrl_1"
+          - name: "plla_ctrl_1"
             offset: "0x4"
             value: "32768"
-          - name: "pll_reserved"
+          - name: "plla_reserved"
             offset: "0x8 ... 0x10"
             value: "0x0"
+      - name: "nas782x_pllb"
+        id: "19"
+        mmio_base: "0x44f001f0"
+        mmio_size: "0x10"
+        registers:
+          - name: "pllb_reserved"
+            offset: "0x0 ... 0x10"
+            value: "0x0"
       - name: "nas782x_reset"
-        id: "6"
+        id: "20"
         mmio_base: "0x44e00034"
         mmio_size: "0x8"
         registers:
@@ -102,7 +214,7 @@ machine:
             offset: "0x0 ... 0x8"
             value: "0x0"
       - name: "nas782x_rps_timer"
-        id: "7"
+        id: "21"
         mmio_base: "0x44400200"
         mmio_size: "0x40"
         registers:
@@ -110,10 +222,18 @@ machine:
             offset: "0x0 ... 0x40"
             value: "0x0"
       - name: "nas782x_rps"
-        id: "8"
+        id: "22"
         mmio_base: "0x44400000"
         mmio_size: "0x14"
         registers:
           - name: "rps_reserved"
             offset: "0x0 ... 0x14"
+            value: "0x0"
+      - name: "nas782x_nand"
+        id: "23"
+        mmio_base: "0x41C00000"
+        mmio_size: "0x20"
+        registers:
+          - name: "nand_reseverd"
+            offset: "0x0 ... 0x20"
             value: "0x0"
