--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,90 @@
 altgraph==0.16.1
+apturl==0.5.2
 beautifulsoup4==4.7.1
 binwalk==2.1.0
+blinker==1.3
+Brlapi==0.6.4
 certifi==2019.3.9
 chardet==3.0.4
+checkbox-support==0.22
+command-not-found==0.3
+cryptography==1.2.3
 cssselect==1.0.3
 cycler==0.10.0
+defer==1.0.6
 Django==2.2
 docopt==0.6.2
+feedparser==5.1.3
 future==0.17.1
 graphviz==0.10.1
+guacamole==0.9.2
+html5lib==0.999
+httplib2==0.9.1
 idna==2.8
 imageio==2.5.0
 ioflo==1.5.4
+Jinja2==2.8
 kiwisolver==1.0.1
+language-selector==0.1
 libmagic==1.0
 libnacl==1.6.1
+louis==2.6.4
 lxml==4.3.4
+Mako==1.0.3
+MarkupSafe==0.23
 matplotlib==3.0.3
 numpy==1.16.2
+oauthlib==1.0.3
+onboard==1.2.0
+padme==1.1.1
 pefile==2019.4.18
+pexpect==4.0.1
 Pillow==6.0.0
 pipreqs==0.4.9
+plainbox==0.25
 portalocker==0.5.7
 progressbar==2.5
 progressbar2==3.42.0
-psutil==5.6.2
-PyInstaller==3.5
+ptyprocess==0.5
+pyasn1==0.1.9
+pycups==1.9.73
+pycurl==7.43.0
+pygobject==3.20.0
+PyJWT==1.3.0
 pyparsing==2.4.0
-pyquery==1.4.0
+python-apt==1.1.0b1+ubuntu0.16.4.5
 python-dateutil==2.8.0
-python-magic==0.4.15
+python-debian==0.1.27
+python-systemd==231
 python-utils==2.3.0
 pytz==2019.1
-pywin32-ctypes==0.2.0
-PyYAML==5.1.1
-pyzmq==18.0.1
-raet==0.6.8
+pyxdg==0.25
+reportlab==3.3.0
 requests==2.21.0
-scipy==1.2.1
+sessioninstaller==0.0.0
 six==1.12.0
 soupsieve==1.9.1
 sqlparse==0.3.0
-ujson==1.35
+system-service==0.3
+ubuntu-drivers-common==0.0.0
+ufw==0.35
+unattended-upgrades==0.1
+unity-scope-calculator==0.1
+unity-scope-chromiumbookmarks==0.1
+unity-scope-colourlovers==0.1
+unity-scope-devhelp==0.1
+unity-scope-firefoxbookmarks==0.1
+unity-scope-gdrive==0.7
+unity-scope-manpages==0.1
+unity-scope-openclipart==0.1
+unity-scope-texdoc==0.1
+unity-scope-tomboy==0.1
+unity-scope-virtualbox==0.1
+unity-scope-yelp==0.1
+unity-scope-zotero==0.1
 urllib3==1.24.1
+usb-creator==0.3.0
+xdiagnose==3.8.4.1
+xkit==0.0.0
+XlsxWriter==0.7.3
 yarg==0.1.9
