--- a/generation/mipsel/config.yaml
+++ b/generation/mipsel/config.yaml
@@ -8,9 +8,9 @@ install:
     timer_name: "hw\\timer"
   linux:
     root: "/root/firmware/qemu-4.0.0-rc4"
-    machine_name: "hw/arm"
+    machine_name: "hw/mips"
     ic_name: "hw/intc"
-    soc_name: "hw/arm"
-    bridge_name: "hw/arm"
+    soc_name: "hw/mips"
+    bridge_name: "hw/mips"
     timer_name: "hw/timer"
   include: "include"
