--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 altgraph==0.16.1
 apturl==0.5.2
 beautifulsoup4==4.7.1
-binwalk==2.1.0
+binwalk==2.1.1
 blinker==1.3
 Brlapi==0.6.4
 certifi==2019.3.9
 chardet==3.0.4
 checkbox-support==0.22
+Click==7.0
 command-not-found==0.3
 cryptography==1.2.3
 cssselect==1.0.3
@@ -14,6 +15,7 @@ cycler==0.10.0
 defer==1.0.6
 Django==2.2
 docopt==0.6.2
+fdt==0.1.2
 feedparser==5.1.3
 future==0.17.1
 graphviz==0.10.1
@@ -52,6 +54,7 @@ pycurl==7.43.0
 pygobject==3.20.0
 PyJWT==1.3.0
 pyparsing==2.4.0
+pyqtgraph==0.10.0
 python-apt==1.1.0b1+ubuntu0.16.4.5
 python-dateutil==2.8.0
 python-debian==0.1.27
@@ -59,6 +62,7 @@ python-systemd==231
 python-utils==2.3.0
 pytz==2019.1
 pyxdg==0.25
+PyYAML==5.1.2
 reportlab==3.3.0
 requests==2.21.0
 sessioninstaller==0.0.0
