--- a/logging.yaml
+++ b/logging.yaml
@@ -9,7 +9,15 @@ handlers:
     class: logging.StreamHandler
     level: INFO
     formatter: simple
+  file:
+    class: logging.handlers.RotatingFileHandler
+    level: INFO
+    formatter: simple
+    filename: ./log/s1-get-metadata.log
+    maxBytes: 10485760
+    backupCount: 20
+    encoding: utf8
 
 root:
   level: INFO
-  handlers: [console]
+  handlers: [console, file]
