add irq related registers for bcma cc & mips cores to pass bcma_bus_register

--- a/generation/mipsel/machines/wrt320n_v1.yaml
+++ b/generation/mipsel/machines/wrt320n_v1.yaml
@@ -21,7 +21,7 @@ machine:
       bridge:
         bridge_name: "bcma"
         bridge_mmio_base: "0x18000000"
-        bridge_mmio_size: "0x2000"
+        bridge_mmio_size: "0x6000"
         bridge_registers:
           - name: "bcma_cc_id_register"
             offset: "0x0"
@@ -29,6 +29,7 @@ machine:
           - name: "bcma_cc_erom_register"
             offset: "0xfc"
             value: "0x18001000"
+          # the erom content, records the core's info
           - name: "bcma_scan_commoncore_CIA"
             offset: "0x1000"
             value: "0x1 | 0x0 | 0x0 << 4 | 0x800 << 8 | 0x4BF << 20"
@@ -62,3 +63,47 @@ machine:
           - name: "bcma_scan_END"
             offset: "0x1028"
             value: "0x1 | 0xe"
+          # common_core's registers part 2 (bus->drv_cc->io_wrap)
+          - name: "bcma_common_core_OOBSELOUTA30"
+            offset: "0x3100"
+            value: "0x1"
+          # mips_core's registers part 1 (bus->drv_mips->io_addr)
+          - name: "bcma_mips_core_mips74k_CORECTL"
+            offset: "0x4000"
+            value: "0x0"
+          - name: "bcma_mips_core_mips74k_EXCEPTBASE"
+            offset: "0x4004"
+            value: "0x0"
+          - name: "bcma_mips_core_mips74k_BIST"
+            offset: "0x400c"
+            value: "0x0"
+          - name: "bcma_mips_core_mips74k_INTMASK_INT0"
+            offset: "0x4014"
+            value: "0x0 | 0x1"
+          - name: "bcma_mips_core_mips74k_INTMASK_INT1"
+            offset: "0x4018"
+            value: "0x0"
+          - name: "bcma_mips_core_mips74k_INTMASK_INT2"
+            offset: "0x401c"
+            value: "0x0"
+          - name: "bcma_mips_core_mips74k_INTMASK_INT3"
+            offset: "0x4020"
+            value: "0x0"
+          - name: "bcma_mips_core_mips74k_INTMASK_INT4"
+            offset: "0x4024"
+            value: "0x0"
+          - name: "bcma_mips_core_mips74k_INTMASK_XXXX"
+            offset: "0x4028"
+            value: "0x0"
+          - name: "bcma_mips_core_mips74k_NMIMASK"
+            offset: "0x402c"
+            value: "0x0"
+          - name: "bcma_mips_core_mips74k_GPIOSEL"
+            offset: "0x4040"
+            value: "0x0"
+          - name: "bcma_mips_core_mips74k_GPIOOUT"
+            offset: "0x4044"
+            value: "0x0"
+          - name: "bcma_mips_core_mips74k_GPIOEN"
+            offset: "0x4048"
+            value: "0x0"
