--- a/logging.yaml
+++ b/logging.yaml
@@ -13,7 +13,7 @@ handlers:
     class: logging.handlers.RotatingFileHandler
     level: INFO
     formatter: simple
-    filename: ./log/s1-get-metadata.log
+    filename: ./log/s2-get-dts.log
     maxBytes: 10485760
     backupCount: 20
     encoding: utf8
