--- a/database/cpu.yaml
+++ b/database/cpu.yaml
@@ -9,15 +9,15 @@ arm:
   - arm1136
   - arm1136-r2
   - arm1176
-  - arm11mpcore
+  - arm11mpcore@arm11mpcore-priv
   - cortex-m0
   - cortex-m3
   - cortex-m33
   - cortex-m4
   - cortex-a7
   - cortex-a8
-  - cortex-a9
-  - cortex-a15
+  - cortex-a9@arm-a9mp-priv
+  - cortex-a15@arm-a15mp-priv
   - cortex-r5
   - cortex-r5f
   - ti925t
