--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,7 @@ pygobject==3.20.0
 PyJWT==1.3.0
 pyparsing==2.4.0
 pyqtgraph==0.10.0
+pyquery==1.4.0
 python-apt==1.1.0b1+ubuntu0.16.4.5
 python-dateutil==2.8.0
 python-debian==0.1.27
