--- a/logging.yaml
+++ b/logging.yaml
@@ -13,7 +13,7 @@ handlers:
     class: logging.handlers.RotatingFileHandler
     level: INFO
     formatter: simple
-    filename: ./log/esv.log
+    filename: ./log/salamander.log
     maxBytes: 10485760
     backupCount: 20
     encoding: utf8
