test wrt350nv2 done

--- a/tests/machines/wrt350n_v2.yaml
+++ b/tests/machines/wrt350n_v2.yaml
@@ -5,6 +5,7 @@ endian: "l"
 board_id: "0x661"
 ram:
   ram_size: "32 * MiB"
+  ram_priority: "0"
 flash:
   flash_type: "nor"
   flash_base: "0xf4000000"
