add pymake as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "openwrt-build-docker"]
 	path = openwrt-build-docker
 	url = git@github.com:cyruscyliu/openwrt-build-docker.git
+[submodule "pymake"]
+	path = pymake
+	url = https://github.com/mozilla/pymake.git
