--- a/logging.yaml
+++ b/logging.yaml
@@ -10,13 +10,14 @@ handlers:
     level: INFO
     formatter: simple
   file:
-    class: logging.handlers.RotatingFileHandler
+    class: logging.handlers.TimedRotatingFileHandler
     level: INFO
     formatter: simple
     filename: ./log/salamander.log
-    maxBytes: 10485760
-    backupCount: 20
     encoding: utf8
+    backupCount: 20
+    interval: 1
+    when: H
 
 root:
   level: INFO
