copy qemu-4.0.0-patched.tar.xz and compile it in the firmware working dir

--- a/qemu/Makefile
+++ b/qemu/Makefile
@@ -9,12 +9,11 @@ prepare:
 	tar --skip-old-files -Jxf $(DIR_TO_BUILD)/$(PACKAGE_NAME) -C $(DIR_TO_BUILD)
 
 build:
-	cd $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME) && git init -q && git add .gitignore && git add * && git commit -q -m "init"
+	cd $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME) && git init -q && git add . && git commit -q -m "init"
 	cp -r files/* $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME)/
-	cd $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME) && git add * && git commit -q -m "patch $(PACKAGE_DIR_NAME)" && git format-patch -q HEAD^1
+	cd $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME) && git add . && git commit -q -m "patch $(PACKAGE_DIR_NAME)" && git format-patch -q HEAD^1
 	mv $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME)/*.patch ./patches/
-	cd $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME) && ./configure --target-list=arm-softmmu,mipsel-softmmu --enable-debug >/dev/null
-	cd $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME) && make -j4
+	cd $(DIR_TO_BUILD) && tar -Jcf $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME)-patched.tar.xz $(PACKAGE_DIR_NAME)
 
 clean:
 	rm -rf $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME)
