--- a/binwalk/Makefile
+++ b/binwalk/Makefile
@@ -9,16 +9,15 @@ prepare:
 	tar --skip-old-files -zxf $(DIR_TO_BUILD)/$(PACKAGE_NAME) -C $(DIR_TO_BUILD)
 
 build:
-	cd $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME) && git init -q && git add .gitignore && git add * && git commit -q -m "init"
+	cd $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME) && git init -q && git add . && git commit -q -m "init"
 	cp -r files/* $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME)/src/
-	cd $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME) && git add * && git commit -q -m "patch $(PACKAGE_DIR_NAME)" && git format-patch -q HEAD^1
+	cd $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME) && git add . && git commit -q -m "patch $(PACKAGE_DIR_NAME)" && git format-patch -q HEAD^1
 	mv $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME)/*.patch ./patches/
 	cd $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME) && sudo $(PYTHON) setup.py -q uninstall && sudo $(PYTHON) setup.py -q install
 	cd $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME) && sudo cp src/build/scripts-3.7/binwalk /usr/local/bin
 
 clean:
 	rm -rf $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME)
-
 
 clean_all:
 	rm -rf $(DIR_TO_BUILD)/$(PACKAGE_DIR_NAME) $(DIR_TO_BUILD)/${PACKAGE_NAME}
