--- a/database/qemu_devices.yaml
+++ b/database/qemu_devices.yaml
@@ -1,132 +1,137 @@
-cpus:
-  arm:
-    - arm926
-    - arm946
-    - arm1026
-    - arm1136
-    - arm1136-r2
-    - arm1176
-    - arm11mpcore@arm11mpcore-priv
-    - cortex-m0
-    - cortex-m3
-    - cortex-m33
-    - cortex-m4
-    - cortex-a7
-    - cortex-a8
-    - cortex-a9@arm-a9mp-priv
-    - cortex-a15@arm-a15mp-priv
-    - cortex-r5
-    - cortex-r5f
-    - ti925t
-    - pxa250
-    - pxa255
-    - pxa260
-    - pxa261
-    - pxa262
-    - pxa270-a0
-    - pxa270-a1
-    - pxa270
-    - pxa270-b0
-    - pxa270-b1
-    - pxa270-c0
-    - pxa270-c5
-    - sa1100
-    - sa1110
-    - max
-  mips:
-    - 4Kc
-    - 4Km
-    - 4KEcR1
-    - 4KEmR1
-    - 4KEc
-    - 4KEm
-    - 24Kc
-    - 24KEc
-    - 24Kf
-    - 34Kf
-    - 74Kf
-    - M14K
-    - M14Kc
-    - P5600
-    - mips32r6-generic
-    - I7200
-    - R4000
-    - VR5432
-    - 5Kc
-    - 5Kf
-    - 20Kc
-    - mips64r2-generic
-    - 5KEc
-    - 5KEf
-    - I6400
-    - I6500
-    - Loongson-2E
-    - Loongson-2F
-    - mips64dspr2
+cpu:
+  # arm:
+  - "arm926"
+  - "arm946"
+  - "arm1026"
+  - "arm1136"
+  - "arm1136-r2"
+  - "arm1176"
+  - "arm11mpcore"
+  - "cortex-m0"
+  - "cortex-m3"
+  - "cortex-m33"
+  - "cortex-m4"
+  - "cortex-a7"
+  - "cortex-a8"
+  - "cortex-a9"
+  - "cortex-a15"
+  - "cortex-r5"
+  - "cortex-r5f"
+  - "ti925t"
+  - "pxa250"
+  - "pxa255"
+  - "pxa260"
+  - "pxa261"
+  - "pxa262"
+  - "pxa270-a0"
+  - "pxa270-a1"
+  - "pxa270"
+  - "pxa270-b0"
+  - "pxa270-b1"
+  - "pxa270-c0"
+  - "pxa270-c5"
+  - "sa1100"
+  - "sa1110"
+  - "max"
+  #  mips:
+  - "4Kc"
+  - "4Km"
+  - "4KEcR1"
+  - "4KEmR1"
+  - "4KEc"
+  - "4KEm"
+  - "24Kc"
+  - "24KEc"
+  - "24Kf"
+  - "34Kf"
+  - "74Kf"
+  - "M14K"
+  - "M14Kc"
+  - "P5600"
+  - "mips32r6-generic"
+  - "I7200"
+  - "R4000"
+  - "VR5432"
+  - "5Kc"
+  - "5Kf"
+  - "20Kc"
+  - "mips64r2-generic"
+  - "5KEc"
+  - "5KEf"
+  - "I6400"
+  - "I6500"
+  - "Loongson-2E"
+  - "Loongson-2F"
+  - "mips64dspr2"
+cpu_private:
+  "arm11mpcore":
+    "arm11mpcore-priv"
+  "cortex-a9":
+    "arm-a9mp-priv"
+  "cortex-a15":
+    "arm-a15mp-priv"
 ic:
-  "Allwinner A10 PIC":
-  "etraxfs,pic":
-  "Heathrow PIC":
-  "APIC":
-  "ARM GIC":
-  "MIPS GIC":
-  "8259":
-  "ARM NVIC":
-  "ASPEED VIC":
-  "BCM286X IC":
-  "exynos4210 GIC":
-  "ARM RealView":
-  "GRLIB IRQMP":
-  "i.MX31 VIC":
-  "i.MX7 GPCv2":
-  "QEMU Generic Interrupt Controller":
-  "Xilinx I/O Module Interrupt Controller":
-  "Xilinx IPI Inter Processor Interrupt block":
+  - "Allwinner A10 PIC"
+  - "etraxfs,pic"
+  - "Heathrow PIC"
+  - "APIC"
+  - "ARM GIC"
+  - "MIPS GIC"
+  - "8259"
+  - "ARM NVIC"
+  - "ASPEED VIC"
+  - "BCM286X IC"
+  - "exynos4210 GIC"
+  - "ARM RealView"
+  - "GRLIB IRQMP"
+  - "i.MX31 VIC"
+  - "i.MX7 GPCv2"
+  - "QEMU Generic Interrupt Controller"
+  - "Xilinx I/O Module Interrupt Controller"
+  - "Xilinx IPI Inter Processor Interrupt block"
 uart:
-  "BCM2835 mini UART and SPI":
-  "Cadence UART":
-  "ARM CMSDK APB UART":
-  "grlib,apbuart":
-  "i.MX series UART":
-  "Bochs-style debug console (port E9) for INTEL":
-  "Canon DIGIC UART":
-  "ESCC (Z8030/Z8530/Z85C30/SCC/ESCC) serial port":
-  "etraxfs,serial":
-  "Exynos4210 UART":
-  "ColdFire UART":
-  "LatticeMico32":
-  "JTAG UART":
-  "LatticeMico32 UART":
-  "GE IP-Octal 232 8-channel RS-232 IndustryPack":
-  "nRF51 SoC UART":
-  "Milkymist UART":
-  "TI OMAP processors UART":
-  "Parallel PORT (ISA bus helpers)":
-  "Parallel PORT":
-  "Arm PrimeCell PL011 UART":
-  "sclplmconsole":
-  "sclpconsole":
-  "16550A UART (ISA)":
-  "16550A UART (PCI)":
-  "16550A UART":
-    condition_or:
-      - "16550"
-      - "8250"
-  "SCI/SCIF serial port":
-  "spapr-vty":
-  "STM32F2XX USART":
-  "Terminal 3270":
-  "Virtio Console and Generic Serial Port Devices":
-  "Xen Console":
-  "A bus for connecting virtio serial and console ports":
-  "Xilinx uartlite":
+  - "BCM2835 mini UART and SPI"
+  - "Cadence UART"
+  - "ARM CMSDK APB UART"
+  - "grlib,apbuart"
+  - "i.MX series UART"
+  - "Bochs-style debug console (port E9) for INTEL"
+  - "Canon DIGIC UART"
+  - "ESCC (Z8030/Z8530/Z85C30/SCC/ESCC) serial port"
+  - "etraxfs,serial"
+  - "Exynos4210 UART"
+  - "ColdFire UART"
+  - "LatticeMico32"
+  - "JTAG UART"
+  - "LatticeMico32 UART"
+  - "GE IP-Octal 232 8-channel RS-232 IndustryPack"
+  - "nRF51 SoC UART"
+  - "Milkymist UART"
+  - "TI OMAP processors UART"
+  - "Parallel PORT (ISA bus helpers)"
+  - "Parallel PORT"
+  - "Arm PrimeCell PL011 UART"
+  - "sclplmconsole"
+  - "sclpconsole"
+  - "16550A UART (ISA)"
+  - "16550A UART (PCI)"
+  - "16550A UART"
+  - "SCI/SCIF serial port"
+  - "spapr-vty"
+  - "STM32F2XX USART"
+  - "Terminal 3270"
+  - "Virtio Console and Generic Serial Port Devices"
+  - "Xen Console"
+  - "A bus for connecting virtio serial and console ports"
+  - "Xilinx uartlite"
 flash:
-  nor:
-    - pflash_cfi01
-    - pflash_cfi02
-    - m25p80
-  nand:
-    - tc58128
-    - onenand
-    - km29u128at
-    - kmf2808u0a
+  #  nor:
+  - "pflash_cfi01"
+  - "pflash_cfi02"
+  - "m25p80"
+  #  nand:
+  - "tc58128"
+  - "onenand"
+  - "km29u128at"
+  - "kmf2808u0a"
+
