--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-firmware
 build
 log
 .idea
@@ -12,3 +11,8 @@ extract_tmp
 .pytest_cache
 .coverage
 *.tar.xz
+.bash_history
+.binwalk/
+.cache/
+.gitconfig
+.python_history
