--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
       - checkout
       - run: ls
-  workflows:
-    version: 2
-    workflow:
-      jobs:
-        - build
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build
