--- a/logging.yaml
+++ b/logging.yaml
@@ -10,14 +10,12 @@ handlers:
     level: INFO
     formatter: simple
   file:
-    class: logging.handlers.TimedRotatingFileHandler
+    class: logging.FileHandler
     level: INFO
     formatter: simple
     filename: ./log/salamander.log
     encoding: utf8
-    backupCount: 20
-    interval: 1
-    when: H
+    mode: w
 
 root:
   level: INFO
