--- a/profile/stats.yaml
+++ b/profile/stats.yaml
@@ -1,6 +1,3 @@
-bamboo:
-  mode: count
-  level: bamboo
 basics:
   mode: stats
   level: basics
@@ -14,6 +11,29 @@ basics:
     - name
     - path
     - uuid
+  critical:
+    architecture:
+      conditions:
+        alywas: True
+    board_id:
+      conditions:
+        alywas: False
+        basics/architecture: arm
+    brand:
+      conditions:
+        alywas: True
+    endian:
+      conditions:
+        alywas: True
+    name:
+      conditions:
+        alywas: True
+    path:
+      conditions:
+        alywas: True
+    uuid:
+      conditions:
+        alywas: True
 brand:
   mode: stats
   level: brand
@@ -86,3 +106,6 @@ uart:
     - mmio_size
     - name
     - reg_shift
+bamboo:
+  mode: count
+  level: bamboo
