--- a/database/qemu.devices.yaml
+++ b/database/qemu.devices.yaml
@@ -1,5 +1,4 @@
 cpu:
-  # arm:
   arm,arm1026:
     - arm1026
   arm,arm1136:
@@ -36,6 +35,14 @@ cpu:
     - pxa270-c5
   intel,sa1100:
     - sa1100
+  mips,mips24Kc:
+    - 24Kc
+  mips,mips24KEc:
+    - 24KEc
+  mips,mips4KEc:
+    - 4KEc
+  mips,mips74Kc:
+    - 74Kf
 cpu_private:
   "arm11mpcore":
     "arm11mpcore-priv"
@@ -43,6 +50,12 @@ cpu_private:
     "arm-a9mp-priv"
   "cortex-a15":
     "arm-a15mp-priv"
+  "24Kc":
+    "mips-default"
+  "24KEc":
+    "mips-default"
+  "4KEc":
+    "mips-default"
   "74Kf":
     "mips-default"
 ic:
