--- a/database/qemu.devices.yaml
+++ b/database/qemu.devices.yaml
@@ -115,13 +115,11 @@ uart:
   - "A bus for connecting virtio serial and console ports"
   - "Xilinx uartlite"
 flash:
-  #  nor:
-  - "pflash_cfi01"
-  - "pflash_cfi02"
-  - "m25p80"
-  #  nand:
-  - "tc58128"
-  - "onenand"
-  - "km29u128at"
-  - "kmf2808u0a"
-
+  cfi-flash:
+    pflash_cfi01 # pflash_cfi02
+# - m25p80
+# - nand
+# - "tc58128"
+# - "onenand"
+# - "km29u128at"
+# - "kmf2808u0a"
