update logging system

--- a/logging.yaml
+++ b/logging.yaml
@@ -7,11 +7,11 @@ formatters:
 handlers:
   console:
     class: logging.StreamHandler
-    level: INFO
+    level: DEBUG
     formatter: simple
   file:
     class: logging.FileHandler
-    level: INFO
+    level: DEBUG
     formatter: simple
     filename: ./log/salamander.log
     encoding: utf8
