test 3 orion5x firmware

--- a/examples/arm/mach-orion5x/profile.yaml
+++ b/examples/arm/mach-orion5x/profile.yaml
@@ -185,6 +185,8 @@ brand:
     supportedcurrentrel: '10.03'
     supportedsincerel: '10.03'
     target: orion
+kernel:
+  kernel_load_address: '0x00008000'
 cpu:
   model: arm926
 flash:
