--- a/examples/arm/mach-oxnas/profile.yaml
+++ b/examples/arm/mach-oxnas/profile.yaml
@@ -195,6 +195,8 @@ basics:
   endian: l
   machine_description: shuttle_kd20
   machine_name: shuttle_kd20
+kernel:
+  kernel_load_address: '0x00008000'
 brand:
   revision: '15.05'
   subtarget: ox820
