--- a/examples/mips/bcm47xx/profile.yaml
+++ b/examples/mips/bcm47xx/profile.yaml
@@ -27,154 +27,153 @@ uart:
   reg_shift: "0"
   irq: "2"
 bamboo:
-  - name: "bcma"
+  "bcma":
     mmio_base: "0x18000000"
     mmio_size: "0x5000"
     mmio_priority: "-1"
     registers:
-      # common_core's registers part 1 (bus->drv_cc->io_addr)
-      - name: "bcma_cc_id_register"
+      "bcma_cc_id_register":
         offset: "0x0"
         value: "0x4716 | 0x10000 | 0x900000 | 0x0000000 | 0x00000000"
-      - name: "bcma_cc_CAP"
+      "bcma_cc_CAP":
         offset: "0x4"
         value: "0x1 | 0x8 | 0x700 | 0x10000000"
-      - name: "bcma_cc_CORECTL"
+      "bcma_cc_CORECTL":
         offset: "0x8"
         value: "0x1 | 0x2 | 0x8"
-      - name: "bcma_cc_CLKDIV"
+      "bcma_cc_CLKDIV":
         offset: "0xa4"
         value: "0xff"
-      - name: "bcma_cc_erom_register"
+      "bcma_cc_erom_register":
         offset: "0xfc"
         value: "0x18002000"
-      - name: "bcma_cc_FLASH_CFG"
+      "bcma_cc_FLASH_CFG":
         offset: "0x128"
         value: "0x10"
-      - name: "bcma_cc_uart0_DATA"
+      "bcma_cc_uart0_DATA":
         offset: "0x300"
         value: "0x0"
-      - name: "bcma_cc_uart0_IMR"
+      "bcma_cc_uart0_IMR":
         offset: "0x304"
         value: "0x0"
-      - name: "bcma_cc_uart0_FCR"
+      "bcma_cc_uart0_FCR":
         offset: "0x308"
         value: "0x0"
-      - name: "bcma_cc_uart0_LCR"
+      "bcma_cc_uart0_LCR":
         offset: "0x30c"
         value: "0x0"
-      - name: "bcma_cc_uart0_MCR"
+      "bcma_cc_uart0_MCR":
         offset: "0x310"
         value: "0x0"
-      - name: "bcma_cc_uart0_LSR"
+      "bcma_cc_uart0_LSR":
         offset: "0x314"
         value: "0x1 << 5 | 0x1 << 6 | 0x1 << 7"
-        #value: "0x0"
-      - name: "bcma_cc_uart0_MSR"
+      "bcma_cc_uart0_MSR":
         offset: "0x318"
         value: "0x0"
-      - name: "bcma_cc_uart0_SCRATCH"
+      "bcma_cc_uart0_SCRATCH":
         offset: "0x31c"
         value: "0x0"
-      - name: "bcma_cc_uart1_DATA"
+      "bcma_cc_uart1_DATA":
         offset: "0x400"
         value: "0x0"
-      - name: "bcma_cc_uart1_IMR"
+      "bcma_cc_uart1_IMR":
         offset: "0x404"
         value: "0x0"
-      - name: "bcma_cc_uart1_FCR"
+      "bcma_cc_uart1_FCR":
         offset: "0x408"
         value: "0x0"
-      - name: "bcma_cc_uart1_LCR"
+      "bcma_cc_uart1_LCR":
         offset: "0x40c"
         value: "0x0"
-      - name: "bcma_cc_uart1_MCR"
+      "bcma_cc_uart1_MCR":
         offset: "0x410"
         value: "0x0"
-      - name: "bcma_cc_uart1_LSR"
+      "bcma_cc_uart1_LSR":
         offset: "0x414"
         value: "0x0"
-      - name: "bcma_cc_uart1_MSR"
+      "bcma_cc_uart1_MSR":
         offset: "0x418"
         value: "0x0"
-      - name: "bcma_cc_uart1_SCRATCH"
+      "bcma_cc_uart1_SCRATCH":
         offset: "0x41c"
         value: "0x0"
       # common_core's registers part 2 (bus->drv_cc->io_wrap)
-      - name: "bcma_cc_OOBSELOUTA30"
+      "bcma_cc_OOBSELOUTA30":
         offset: "0x1100"
         value: "0x3"
       # the erom content, records the core's info
-      - name: "bcma_scan_commoncore_CIA"
+      "bcma_scan_commoncore_CIA":
         offset: "0x2000"
         value: "0x1 | 0x0 | 0x0 << 4 | 0x800 << 8 | 0x4BF << 20"
-      - name: "bcma_scan_commoncore_CIB"
+      "bcma_scan_commoncore_CIB":
         offset: "0x2004"
         value: "0x1 | 0x0 | 0x1 << 4 | 0x1 << 9 | 0x1 << 14 | 0x0 << 19 | 0x23 << 24"
-      - name: "bcma_scan_commoncore_MP"
+      "bcma_scan_commoncore_MP":
         offset: "0x2008"
         value: "0x1 | 0x2 | 0x0 << 4"
-      - name: "bcma_scan_commoncore_SP1"
+      "bcma_scan_commoncore_SP1":
         offset: "0x200c"
         value: "0x1 | 0x4 | 0x0 << 4 | 0x0 << 6 | 0x0 << 8 | 0x18000 << 12"
-      - name: "bcma_scan_commoncore_MW1"
+      "bcma_scan_commoncore_MW1":
         offset: "0x2010"
         value: "0x1 | 0x4 | 0x0 << 4 | 0xC0 | 0x0 << 8 | 0x18001 << 12"
-      - name: "bcma_scan_mipscore_CIA"
+      "bcma_scan_mipscore_CIA":
         offset: "0x2014"
         value: "0x1 | 0x0 | 0x0 << 4 | 0x82c << 8 | 0x4A7 << 20"
-      - name: "bcma_scan_mipscore_CIB"
+      "bcma_scan_mipscore_CIB":
         offset: "0x2018"
         value: "0x1 | 0x0 | 0x1 << 4 | 0x1 << 9 | 0x1 << 14 | 0x0 << 19 | 0x23 << 24"
-      - name: "bcma_scan_mipscore_MP"
+      "bcma_scan_mipscore_MP":
         offset: "0x201c"
         value: "0x1 | 0x2 | 0x0 << 4"
-      - name: "bcma_scan_mipscore_SP1"
+      "bcma_scan_mipscore_SP1":
         offset: "0x2020"
         value: "0x1 | 0x4 | 0x0 << 4 | 0x0 << 6 | 0x0 << 8 | 0x18003 << 12"
-      - name: "bcma_scan_mipscore_MW1"
+      "bcma_scan_mipscore_MW1":
         offset: "0x2024"
         value: "0x1 | 0x4 | 0x0 << 4 | 0xC0 | 0x0 << 8 | 0x18004 << 12"
-      - name: "bcma_scan_END"
+      "bcma_scan_END":
         offset: "0x2028"
         value: "0x1 | 0xe"
       # mips_core's registers part 1 (bus->drv_mips->io_addr)
-      - name: "bcma_mips_core_mips74k_CORECTL"
+      "bcma_mips_core_mips74k_CORECTL":
         offset: "0x3000"
         value: "0x0"
-      - name: "bcma_mips_core_mips74k_EXCEPTBASE"
+      "bcma_mips_core_mips74k_EXCEPTBASE":
         offset: "0x3004"
         value: "0x0"
-      - name: "bcma_mips_core_mips74k_BIST"
+      "bcma_mips_core_mips74k_BIST":
         offset: "0x300c"
         value: "0x0"
-      - name: "bcma_mips_core_mips74k_INTMASK_INT0"
+      "bcma_mips_core_mips74k_INTMASK_INT0":
         offset: "0x3014"
         value: "0x8"
-      - name: "bcma_mips_core_mips74k_INTMASK_INT1"
+      "bcma_mips_core_mips74k_INTMASK_INT1":
         offset: "0x3018"
         value: "0x0"
-      - name: "bcma_mips_core_mips74k_INTMASK_INT2"
+      "bcma_mips_core_mips74k_INTMASK_INT2":
         offset: "0x301c"
         value: "0x0"
-      - name: "bcma_mips_core_mips74k_INTMASK_INT3"
+      "bcma_mips_core_mips74k_INTMASK_INT3":
         offset: "0x3020"
         value: "0x0"
-      - name: "bcma_mips_core_mips74k_INTMASK_INT4"
+      "bcma_mips_core_mips74k_INTMASK_INT4":
         offset: "0x3024"
         value: "0x0"
-      - name: "bcma_mips_core_mips74k_INTMASK_XXXX"
+      "bcma_mips_core_mips74k_INTMASK_XXXX":
         offset: "0x3028"
         value: "0x0"
-      - name: "bcma_mips_core_mips74k_NMIMASK"
+      "bcma_mips_core_mips74k_NMIMASK":
         offset: "0x302c"
         value: "0x0"
-      - name: "bcma_mips_core_mips74k_GPIOSEL"
+      "bcma_mips_core_mips74k_GPIOSEL":
         offset: "0x3040"
         value: "0x0"
-      - name: "bcma_mips_core_mips74k_GPIOOUT"
+      "bcma_mips_core_mips74k_GPIOOUT":
         offset: "0x3044"
         value: "0x0"
-      - name: "bcma_mips_core_mips74k_GPIOEN"
+      "bcma_mips_core_mips74k_GPIOEN":
         offset: "0x3048"
         value: "0x0"
+
